--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^4.6.2",
     "core-js": "^3.8.3",
+    "dotenv": "^16.0.2",
     "jquery": "^3.6.1",
     "popper.js": "^1.16.1",
     "vee-validate": "^4.6.9",
